less/style.less
/* <!-- Created by javaBoxer on 4/22/2017 --> */

/* ==========================================================================
Section comment block
========================================================================== */

/* Sub-section comment block
========================================================================== */

/**
* Short description using Doxygen-style comment format
*
* Long description first sentence starts here and continues on this line for a
* while finally concluding here at the end of this paragraph.
*/

/* Basic comment */

// LESS variables for this page: index.html
@font-subnav: "Bitter Regular", "Segoe UI", "Trebuchet MS", Verdana, sans-serif;
@font-nav: "Myriad Pro", Verdana, sans-serif;
@font-roboto: "Roboto Condensed", sans-serif;
@font-secondary: "Bitter Regular", "Segoe UI", "Trebuchet MS", Verdana, sans-serif;
@font-src-sans: "Source Sans Pro", sans-serif;
@font-montserrat: 'Montserrat', arial, sans-serif; // unused but nice
@font-oswald: "Oswald", Verdana;
@bg-light-gray: #f5f7f9;
@black: #000;
@white: #fff;
@light-gray3: #f3f5f6;
@gray-border: #cccbcb;
@blue: #48a3fb;
@cadetblue: #668bae;
@gray-medium: #7b7a7a;
@powder-blue: rgba(41, 171, 226, 0.06);
@white-smoke: #f5f5f5;
@sand-gray: #b5b5b5;
@dark-gray: #333;

// Bootstrap LESS variables to reference
// @screen-xs             480px;
// @screen-tablet         768px
// @screen-desktop        992px
// @screen-lg-desktop     1200px
// Custom to fit footer better on Nexus 10 @800px
@screen-tablet-md-max: 800px;
@screen-tablet-md-min: 780px;
@screen-tablet-large: 1024px;

/* ==========================================================================
  Mixins
========================================================================== */

.btn-transparent() {
    display: inline-block;
    border: 2px solid #eee;
    padding: 7px 15px 7px 10px;
    height: 36px;
    background: white;
    font-family: @font-roboto;
    font-size: 12px;
    font-weight: 700;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    color: #000;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
    
    &:hover {
        background: #eee;
        color: #222;
    }
}

.opacity (@opacity: 0.5) {
    -webkit-opacity: @opacity;
    -moz-opacity: @opacity;
    opacity: @opacity;
}


.round-borders (@radius) {
    border-radius: @radius;
    -moz-border-radius: @radius;
    -webkit-border-radius: @radius;
}


.box-shadow(@x: 0, @y: 0, @blur: 1px, @color: #000) {
    box-shadow: @arguments;
    -moz-box-shadow: @arguments;
    -webkit-box-shadow: @arguments;
}


/* ==========================================================================
  Overrides
========================================================================== */

body {
    font-family: @font-secondary !important;
    //font-family: @font-src-sans !important;
}

//@media (min-width: 1200px) {
//    .container {
//        width: 1012px;
//    }
//}
// global font size larger for elder people
p {
    font-size: 15px;
}

.btn {
    color: @black;
    background-color: @light-gray3;
}

// TODO-bh: change out url for background for deployment
.bg-banner {
    width: 100%;
    height: 30px;
    background-color: @dark-gray;
    
    @media (max-width: @screen-tablet) {
        display: none;
    }
}

.wrapper-banner {
    margin: 8px 0;
    font-family: @font-subnav;
    font-size: 12px;
    color: @white;
    text-transform: uppercase;
}

.banner-phone {
    //text-transform: uppercase;
    
    .phone-icon {
        margin: 0 10px 0 0;
    }
}

.banner-message {
    //text-transform: uppercase;
}

//.chat-message {
//    margin-top: -9px;
//}

#topnavbar.affix {
    position: fixed !important;
    top: 0;
    width: 100%;
}

// TODO-BH: try TBS animation to override hard scroll. can keep #topnavbar above if needed
// Start TBS affix patch for mobile

//#topnavbar.affix {
//    position: fixed !important;
//    top: 19px;
//    animation: affixFadeIn 0.24s  ease-in;
//    -webkit-animation: affixFadeIn 0.24s;
//}
//
//@keyframes affixFadeIn {
//    from {opacity: 0;}
//    to {opacity: 1;}
//}
//
//@-webkit-keyframes affixFadeIn {
//    from {opacity: 0;}
//    to {opacity: 1;}
//}

// End TBS affix patch for mobile

.wrapper-subnav {
    background-color: @white;
    //padding-top: 20px;
    
    .subnavall {
        //margin-bottom: 40px;
        background-color: @blue;
        height: 70px;
    }
}

.logo {
    float: left;
    margin-top: 10px;
    //height: 56px;
    //background-image: url("http://localhost:63342/coastalPhlebotomy/dist/images/logo.png");
    //background-repeat: no-repeat;
    //background-position: left bottom;
}

.subnav-left {
    float: left;
    margin-top: -7px;
    margin-left: 5px;
    font-family: @font-oswald !important;
    font-size: 24px;
    text-transform: uppercase;
    letter-spacing: normal;
    color: @white;
    white-space: nowrap;
    
    @media (min-width: @screen-tablet) {
        font-size: 27px;
        letter-spacing: 5px;
        margin-top: 8px;
    }
    
    @media (min-width: @screen-desktop) {
        font-size: 34px;
        letter-spacing: 16px;
    }
    
    @media (min-width: @screen-lg-desktop) {
        margin-left: 100px;
    }
    
    //@media screen and (max-width: @screen-lg-desktop) and (min-width: @screen-tablet-large) {
    //    font-size: 34px;
    //    letter-spacing: 16px;
    //    margin-left: 150px;
    //}
    
    
    //@media (max-width: @screen-desktop) {
    //    margin-left: 150px;
    //}
    
    span:first-of-type {
        margin-right: -6px;
        font-weight: 300;
    }
    
    span:last-of-type {
        font-weight: 700;
    }
}

.head-title-wrapper {
    margin-top: 7px;
}

.title {
    //margin-top: 15px;
}
/* ... */

